webpage/Styles.css
body {
  color: #497056;               /* Dark gray */
  background-color: #dbc5c5;    /* Light gray */
  background-image: url("images/Notebook.jpg");
  background-size: 100% auto;
  background-repeat: no-repeat;
  background-position: center;
  font-size: 18px;
}

h1 {
  font-size: 4.5em;
}

h2 {
  font-size: 2.5em;
}
h1, h2{
  font-family: "Helvetica", "Arial", sans-serif;
}
h1, h2{
  background-color: #f5d7ec
  ;    /* Light gray */
}

